# onebot-types

./: Cargo.toml  LICENSE  README.md
docs/zh_CN/: conversion.md
ob-types-base/: Cargo.toml
ob-types-base/src/: error.rs  ext.rs  json.rs  lib.rs  tool.rs
ob-types-base/src/cross/: mod.rs  native.rs
ob-types-macro/: Cargo.toml
ob-types-macro/src/: lib.rs  ob_parse.rs  proc.rs  tool.rs
src/: lib.rs
src/base/: data.rs  error.rs  ext.rs  macros.rs  mod.rs  tool.rs
src/compat/: event.rs  message.rs  mod.rs
src/compat/action/: bot.rs  friend.rs  group.rs  mod.rs
src/compat/event/: message.rs  meta.rs  mod.rs  notice.rs  request.rs
src/cross/: mod.rs  native.rs  wasm.rs
src/ob11/: action.rs  event.rs  message.rs  mod.rs
src/ob11/action/: bot.rs  friend.rs  group.rs  mod.rs
src/ob11/event/: message.rs  meta.rs  mod.rs  notice.rs  request.rs  types.rs
src/ob11/message/: mod.rs  types.rs
src/ob12/: action.rs  event.rs  message.rs  mod.rs
src/ob12/action/: file.rs  group.rs  guild.rs  message.rs  meta.rs  mod.rs  user.rs
src/ob12/event/: message.rs  meta.rs  mod.rs  notice.rs  request.rs
src/ob12/message/: mod.rs  types.rs
tests/: compat.rs  messages.json  ob11.rs  ob11_actions.json  ob11_events.json  ob11_messages.json  ob12.rs  ob12_actions.json  ob12_events.json  ob12_messages.json
