[package]
name = "onebot-types"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = { version = "*"}
ob-types-macro = { path = "./ob-types-macro" }
ob-types-base = { path = "./ob-types-base" }
serde = { version = "*", features = ["derive"] }
serde-value = { version = "*" }
base64 =  { version = "*", optional = true }
bitcode = { version = "*", optional = true }

[features]
default = ["ob12"]
base64 = ["dep:base64"]
bitcode = ["dep:bitcode", "ob-types-base/bitcode"]
ob11 = []
ob12 = []

[dev-dependencies]
eyre = "*"
