[package]
name = "onebot-types"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = { version = "2"}
ob-types-macro = { path = "./ob-types-macro" }
serde = { version = "1", features = ["derive"] }
serde-value = { version = "0.7" }
base64 =  { version = "0.22", optional = true }

[features]
default = ["ob12"]
base64 = ["dep:base64"]
ob11 = []
ob12 = ["ob-types-macro/ob12"]
compat = ["ob11", "ob12"]

[dev-dependencies]
eyre = "0.6"
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt"]}
