[package]
name = "ob-types-base"
version = "0.1.0"
edition = "2021"


[dependencies]
thiserror = "*"
serde = { version = "*", features = ["derive"], optional = true }
serde_json = { version = "*", optional = true }
rkyv = { version = "*", optional = true, default-features = false, features = ["std"]}

[features]
json = ["serde", "serde_json"]
zerocpy = ["rkyv"]

[target.'cfg(target_arch = "wasm32")'.dependencies]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
