[package]
name = "ob-types-base"
version = "0.1.0"
edition = "2021"


[dependencies]
thiserror = "*"
serde = { version = "*", features = ["derive"] }
serde-value = { version = "*" }

[features]

[target.'cfg(target_arch = "wasm32")'.dependencies]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
