[package]
name = "ob-types-macro"
version = "0.1.0"
edition = "2021"

[dependencies]
syn = { version = "*", features = ["full"]}
quote = "*"
proc-macro2 = "*"
ob-types-base = { path = "../ob-types-base"}

[target.'cfg(target_arch = "wasm32")'.dependencies]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
serde = { version = "*", features = ["derive"]}
serde_json = { version = "*"}

[lib]
proc-macro = true
