[package]
name = "ob-types-macro"
version = "0.1.0"
edition = "2021"

[dependencies]
syn = { version = "*", features = ["full"]}
quote = "*"
proc-macro2 = "*"
ob-types-base = { path = "../ob-types-base"}
serde = { version = "*", features = ["derive"], optional = true }
serde_json = { version = "*", optional = true }

[features]
json = ["serde", "serde_json"]

[target.'cfg(target_arch = "wasm32")'.dependencies]

[lib]
proc-macro = true
